--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -63,7 +63,8 @@ body.fixed-nav {
   background: rgba(52, 58, 64, 0.5);
   line-height: 45px;
 }
-.scroll-to-top:focus, .scroll-to-top:hover {
+.scroll-to-top:focus,
+.scroll-to-top:hover {
   color: white;
 }
 .scroll-to-top:hover {
@@ -99,11 +100,11 @@ body.fixed-nav {
 }
 #mainNav .navbar-collapse .navbar-sidenav .nav-link-collapse:after {
   float: right;
-  content: '\f107';
-  font-family: 'FontAwesome';
+  content: "\f107";
+  font-family: "FontAwesome";
 }
 #mainNav .navbar-collapse .navbar-sidenav .nav-link-collapse.collapsed:after {
-  content: '\f105';
+  content: "\f105";
 }
 #mainNav .navbar-collapse .navbar-sidenav .sidenav-second-level,
 #mainNav .navbar-collapse .navbar-sidenav .sidenav-third-level {
@@ -114,7 +115,8 @@ body.fixed-nav {
   display: block;
   padding: 0.5em 0;
 }
-#mainNav .navbar-collapse .navbar-sidenav .sidenav-second-level > li > a:focus, #mainNav .navbar-collapse .navbar-sidenav .sidenav-second-level > li > a:hover,
+#mainNav .navbar-collapse .navbar-sidenav .sidenav-second-level > li > a:focus,
+#mainNav .navbar-collapse .navbar-sidenav .sidenav-second-level > li > a:hover,
 #mainNav .navbar-collapse .navbar-sidenav .sidenav-third-level > li > a:focus,
 #mainNav .navbar-collapse .navbar-sidenav .sidenav-third-level > li > a:hover {
   text-decoration: none;
@@ -135,20 +137,35 @@ body.fixed-nav {
 #mainNav .navbar-collapse .navbar-nav > .nav-item.dropdown > .nav-link:after {
   float: right;
   width: auto;
-  content: '\f105';
+  content: "\f105";
   border: none;
-  font-family: 'FontAwesome';
+  font-family: "FontAwesome";
 }
-#mainNav .navbar-collapse .navbar-nav > .nav-item.dropdown > .nav-link .indicator {
+#mainNav
+  .navbar-collapse
+  .navbar-nav
+  > .nav-item.dropdown
+  > .nav-link
+  .indicator {
   position: absolute;
   top: 5px;
   left: 21px;
   font-size: 10px;
 }
-#mainNav .navbar-collapse .navbar-nav > .nav-item.dropdown.show > .nav-link:after {
-  content: '\f107';
+#mainNav
+  .navbar-collapse
+  .navbar-nav
+  > .nav-item.dropdown.show
+  > .nav-link:after {
+  content: "\f107";
 }
-#mainNav .navbar-collapse .navbar-nav > .nav-item.dropdown .dropdown-menu > .dropdown-item > .dropdown-message {
+#mainNav
+  .navbar-collapse
+  .navbar-nav
+  > .nav-item.dropdown
+  .dropdown-menu
+  > .dropdown-item
+  > .dropdown-message {
   overflow: hidden;
   max-width: none;
   text-overflow: ellipsis;
@@ -185,18 +202,52 @@ body.fixed-nav {
     padding-left: 0;
     list-style: none;
   }
-  #mainNav .navbar-collapse .navbar-sidenav > .nav-item .sidenav-second-level > li,
-  #mainNav .navbar-collapse .navbar-sidenav > .nav-item .sidenav-third-level > li {
+  #mainNav
+    .navbar-collapse
+    .navbar-sidenav
+    > .nav-item
+    .sidenav-second-level
+    > li,
+  #mainNav
+    .navbar-collapse
+    .navbar-sidenav
+    > .nav-item
+    .sidenav-third-level
+    > li {
     width: 250px;
   }
-  #mainNav .navbar-collapse .navbar-sidenav > .nav-item .sidenav-second-level > li > a,
-  #mainNav .navbar-collapse .navbar-sidenav > .nav-item .sidenav-third-level > li > a {
+  #mainNav
+    .navbar-collapse
+    .navbar-sidenav
+    > .nav-item
+    .sidenav-second-level
+    > li
+    > a,
+  #mainNav
+    .navbar-collapse
+    .navbar-sidenav
+    > .nav-item
+    .sidenav-third-level
+    > li
+    > a {
     padding: 1em;
   }
-  #mainNav .navbar-collapse .navbar-sidenav > .nav-item .sidenav-second-level > li > a {
+  #mainNav
+    .navbar-collapse
+    .navbar-sidenav
+    > .nav-item
+    .sidenav-second-level
+    > li
+    > a {
     padding-left: 2.75em;
   }
-  #mainNav .navbar-collapse .navbar-sidenav > .nav-item .sidenav-third-level > li > a {
+  #mainNav
+    .navbar-collapse
+    .navbar-sidenav
+    > .nav-item
+    .sidenav-third-level
+    > li
+    > a {
     padding-left: 3.75em;
   }
   #mainNav .navbar-collapse .navbar-nav > .nav-item.dropdown > .nav-link {
@@ -206,7 +257,13 @@ body.fixed-nav {
     width: 24px;
     text-align: center;
   }
-  #mainNav .navbar-collapse .navbar-nav > .nav-item.dropdown .dropdown-menu > .dropdown-item > .dropdown-message {
+  #mainNav
+    .navbar-collapse
+    .navbar-nav
+    > .nav-item.dropdown
+    .dropdown-menu
+    > .dropdown-item
+    > .dropdown-message {
     max-width: 300px;
   }
 }
@@ -266,7 +323,7 @@ body.sidenav-toggled #mainNav.fixed-top #sidenavToggler i {
   -o-transform: scaleX(-1);
   transform: scaleX(-1);
   filter: FlipH;
-  -ms-filter: 'FlipH';
+  -ms-filter: "FlipH";
 }
 
 #mainNav.static-top .sidenav-toggler {
@@ -284,7 +341,7 @@ body.sidenav-toggled #mainNav.static-top #sidenavToggler i {
   -o-transform: scaleX(-1);
   transform: scaleX(-1);
   filter: FlipH;
-  -ms-filter: 'FlipH';
+  -ms-filter: "FlipH";
 }
 
 .content-wrapper {
@@ -335,19 +392,64 @@ body.sidenav-toggled .navbar-sidenav-tooltip.show {
 #mainNav.navbar-dark .navbar-collapse .navbar-sidenav > .nav-item > .nav-link {
   color: #ced4da;
 }
-#mainNav.navbar-dark .navbar-collapse .navbar-sidenav > .nav-item > .nav-link:hover {
+#mainNav.navbar-dark
+  .navbar-collapse
+  .navbar-sidenav
+  > .nav-item
+  > .nav-link:hover {
   color: #f8f9fa;
 }
-#mainNav.navbar-dark .navbar-collapse .navbar-sidenav > .nav-item .sidenav-second-level > li > a,
-#mainNav.navbar-dark .navbar-collapse .navbar-sidenav > .nav-item .sidenav-third-level > li > a {
+#mainNav.navbar-dark
+  .navbar-collapse
+  .navbar-sidenav
+  > .nav-item
+  .sidenav-second-level
+  > li
+  > a,
+#mainNav.navbar-dark
+  .navbar-collapse
+  .navbar-sidenav
+  > .nav-item
+  .sidenav-third-level
+  > li
+  > a {
   color: #ced4da;
 }
-#mainNav.navbar-dark .navbar-collapse .navbar-sidenav > .nav-item .sidenav-second-level > li > a:focus, #mainNav.navbar-dark .navbar-collapse .navbar-sidenav > .nav-item .sidenav-second-level > li > a:hover,
-#mainNav.navbar-dark .navbar-collapse .navbar-sidenav > .nav-item .sidenav-third-level > li > a:focus,
-#mainNav.navbar-dark .navbar-collapse .navbar-sidenav > .nav-item .sidenav-third-level > li > a:hover {
+#mainNav.navbar-dark
+  .navbar-collapse
+  .navbar-sidenav
+  > .nav-item
+  .sidenav-second-level
+  > li
+  > a:focus,
+#mainNav.navbar-dark
+  .navbar-collapse
+  .navbar-sidenav
+  > .nav-item
+  .sidenav-second-level
+  > li
+  > a:hover,
+#mainNav.navbar-dark
+  .navbar-collapse
+  .navbar-sidenav
+  > .nav-item
+  .sidenav-third-level
+  > li
+  > a:focus,
+#mainNav.navbar-dark
+  .navbar-collapse
+  .navbar-sidenav
+  > .nav-item
+  .sidenav-third-level
+  > li
+  > a:hover {
   color: #f8f9fa;
 }
-#mainNav.navbar-dark .navbar-collapse .navbar-nav > .nav-item.dropdown > .nav-link:after {
+#mainNav.navbar-dark
+  .navbar-collapse
+  .navbar-nav
+  > .nav-item.dropdown
+  > .nav-link:after {
   color: #adb5bd;
 }
 @media (min-width: 992px) {
@@ -359,34 +461,91 @@ body.sidenav-toggled .navbar-sidenav-tooltip.show {
     color: white !important;
     background-color: #343a40;
   }
-  #mainNav.navbar-dark .navbar-collapse .navbar-sidenav li.active a:focus, #mainNav.navbar-dark .navbar-collapse .navbar-sidenav li.active a:hover {
+  #mainNav.navbar-dark .navbar-collapse .navbar-sidenav li.active a:focus,
+  #mainNav.navbar-dark .navbar-collapse .navbar-sidenav li.active a:hover {
     color: white;
   }
-  #mainNav.navbar-dark .navbar-collapse .navbar-sidenav > .nav-item .sidenav-second-level,
-  #mainNav.navbar-dark .navbar-collapse .navbar-sidenav > .nav-item .sidenav-third-level {
+  #mainNav.navbar-dark
+    .navbar-collapse
+    .navbar-sidenav
+    > .nav-item
+    .sidenav-second-level,
+  #mainNav.navbar-dark
+    .navbar-collapse
+    .navbar-sidenav
+    > .nav-item
+    .sidenav-third-level {
     background: #343a40;
   }
 }
 
-#mainNav.navbar-light .navbar-collapse .navbar-sidenav .nav-link-collapse:after {
+#mainNav.navbar-light
+  .navbar-collapse
+  .navbar-sidenav
+  .nav-link-collapse:after {
   color: rgba(0, 0, 0, 0.5);
 }
 #mainNav.navbar-light .navbar-collapse .navbar-sidenav > .nav-item > .nav-link {
   color: rgba(0, 0, 0, 0.5);
 }
-#mainNav.navbar-light .navbar-collapse .navbar-sidenav > .nav-item > .nav-link:hover {
+#mainNav.navbar-light
+  .navbar-collapse
+  .navbar-sidenav
+  > .nav-item
+  > .nav-link:hover {
   color: rgba(0, 0, 0, 0.7);
 }
-#mainNav.navbar-light .navbar-collapse .navbar-sidenav > .nav-item .sidenav-second-level > li > a,
-#mainNav.navbar-light .navbar-collapse .navbar-sidenav > .nav-item .sidenav-third-level > li > a {
+#mainNav.navbar-light
+  .navbar-collapse
+  .navbar-sidenav
+  > .nav-item
+  .sidenav-second-level
+  > li
+  > a,
+#mainNav.navbar-light
+  .navbar-collapse
+  .navbar-sidenav
+  > .nav-item
+  .sidenav-third-level
+  > li
+  > a {
   color: rgba(0, 0, 0, 0.5);
 }
-#mainNav.navbar-light .navbar-collapse .navbar-sidenav > .nav-item .sidenav-second-level > li > a:focus, #mainNav.navbar-light .navbar-collapse .navbar-sidenav > .nav-item .sidenav-second-level > li > a:hover,
-#mainNav.navbar-light .navbar-collapse .navbar-sidenav > .nav-item .sidenav-third-level > li > a:focus,
-#mainNav.navbar-light .navbar-collapse .navbar-sidenav > .nav-item .sidenav-third-level > li > a:hover {
+#mainNav.navbar-light
+  .navbar-collapse
+  .navbar-sidenav
+  > .nav-item
+  .sidenav-second-level
+  > li
+  > a:focus,
+#mainNav.navbar-light
+  .navbar-collapse
+  .navbar-sidenav
+  > .nav-item
+  .sidenav-second-level
+  > li
+  > a:hover,
+#mainNav.navbar-light
+  .navbar-collapse
+  .navbar-sidenav
+  > .nav-item
+  .sidenav-third-level
+  > li
+  > a:focus,
+#mainNav.navbar-light
+  .navbar-collapse
+  .navbar-sidenav
+  > .nav-item
+  .sidenav-third-level
+  > li
+  > a:hover {
   color: rgba(0, 0, 0, 0.7);
 }
-#mainNav.navbar-light .navbar-collapse .navbar-nav > .nav-item.dropdown > .nav-link:after {
+#mainNav.navbar-light
+  .navbar-collapse
+  .navbar-nav
+  > .nav-item.dropdown
+  > .nav-link:after {
   color: rgba(0, 0, 0, 0.5);
 }
 @media (min-width: 992px) {
@@ -397,11 +556,20 @@ body.sidenav-toggled .navbar-sidenav-tooltip.show {
     color: #000 !important;
     background-color: #e9ecef;
   }
-  #mainNav.navbar-light .navbar-collapse .navbar-sidenav li.active a:focus, #mainNav.navbar-light .navbar-collapse .navbar-sidenav li.active a:hover {
+  #mainNav.navbar-light .navbar-collapse .navbar-sidenav li.active a:focus,
+  #mainNav.navbar-light .navbar-collapse .navbar-sidenav li.active a:hover {
     color: #000;
   }
-  #mainNav.navbar-light .navbar-collapse .navbar-sidenav > .nav-item .sidenav-second-level,
-  #mainNav.navbar-light .navbar-collapse .navbar-sidenav > .nav-item .sidenav-third-level {
+  #mainNav.navbar-light
+    .navbar-collapse
+    .navbar-sidenav
+    > .nav-item
+    .sidenav-second-level,
+  #mainNav.navbar-light
+    .navbar-collapse
+    .navbar-sidenav
+    > .nav-item
+    .sidenav-third-level {
     background: #f8f9fa;
   }
 }
@@ -476,11 +644,14 @@ body {
 
 h1,
 h2,
-h3,
 h4,
 h5,
 h6 {
   color: #333 !important;
+}
+
+h3 {
+  color: #fff !important;
 }
 
 p {
@@ -514,7 +685,8 @@ a {
   transition: all 0.5s ease-in-out;
   outline: none;
 }
-a:hover, a:focus {
+a:hover,
+a:focus {
   color: #333;
   text-decoration: none;
   outline: none;
@@ -639,11 +811,11 @@ ul.booking_details li strong {
 .form-control {
   font-size: 14px;
   font-size: 0.875rem;
-  padding: .65rem;
+  padding: 0.65rem;
 }
 .form-control.search-top {
   width: 300px;
-  padding: .45rem;
+  padding: 0.45rem;
 }
 
 select.form-control:not([size]):not([multiple]) {
@@ -665,7 +837,8 @@ select.form-control:not([size]):not([multiple]) {
   color: #007bff;
   border: 1px solid #e1e8ed;
 }
-.page-link:focus, .page-link:hover {
+.page-link:focus,
+.page-link:hover {
   color: #fff;
   text-decoration: none;
   background-color: #007bff;
@@ -779,7 +952,11 @@ select.form-control:not([size]):not([multiple]) {
   color: #ffc107;
 }
 
-.unread, .read, .pending, .cancel, .approved {
+.unread,
+.read,
+.pending,
+.cancel,
+.approved {
   background-color: #dc3545;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
@@ -796,11 +973,13 @@ select.form-control:not([size]):not([multiple]) {
   line-height: 1;
 }
 
-.unread, .cancel {
+.unread,
+.cancel {
   background-color: #dc3545;
 }
 
-.read, .approved {
+.read,
+.approved {
   background-color: #28a745;
 }
 
@@ -811,7 +990,7 @@ select.form-control:not([size]):not([multiple]) {
 /* text-based popup styling */
 .white-popup {
   position: relative;
-  background: #FFF;
+  background: #fff;
   padding: 80px 25px 25px 25px;
   width: auto;
   max-width: 500px;
@@ -1001,7 +1180,7 @@ select.form-control:not([size]):not([multiple]) {
   line-height: 32px;
 }
 .sbToggle:after {
-  font-family: 'FontAwesome';
+  font-family: "FontAwesome";
   font-size: 14px;
   content: "\f0d7";
   text-align: center;
